Bug 1651255 - Support Unicode paths when importing devtools memory snapshots r=jimb

The old code was using non-Unicode C strings. This patch updates this to
use Unicode strings to handle paths.

Differential Revision: https://phabricator.services.mozilla.com/D85013